# LLM_EA

./: .env.example  .gitignore  LICENSE  README.md  env_content.txt  growth_calculator.js  imports_analysis.txt  plan_implementacji.md  prd_system_handlowy_llm.md  progress_tracking.md  pyproject.toml  specyfikacja_system_handlowy_llm.md  techstack.md  test_data_generator.py  zapisz_pomysl_handlowy.py
Agent_Manager/: __init__.py  agent_manager.py  coordinator.py  order_processor.py  risk_manager.py  run_manager.py
Common/: logging_config.py  zmq_client.py
Dashboard/: app.py  dashboard.py  run_dashboard.py
Database/: __init__.py  database.py  run_database.py
Expert_Advisor/: LLM_EA.mq5  agent_connector.py
LLM_Engine/: __init__.py  advanced_indicators.py  cache_manager.py  config.py  grok_client.py  llm_client.py  llm_controller.py  llm_engine.py  llm_interface.py  llm_postprocessor.py  llm_preprocessor.py  market_analysis.py  market_analyzer.py  market_data.py  model_selector.py  prompt_builder.py  prompt_formatter.py  prompt_manager.py  prompt_templates.py  request_manager.py  response_handler.py  response_parser.py  run_engine.py  technical_indicators.py  utils.py
MT5_Connector/: README.md  __init__.py  backtester.py  candlestick_patterns.py  connector.py  data_formatter.py  indicators.py  mt5_client.py  run_connector.py
config/: config_dev.json
data/: system_status.json
docs/: README.md  api_reference.md  generate_docs.py  installation_guide.md  konto_demo.md  metoda_master.md  risk_management.md  rozwoj_systemu.md  system_overview.md  (+1 more)
(+244 files in other folders)
