[tool.poetry]
name = "llm-trader-mt5"
version = "0.1.0"
description = "System handlowy dla MT5 wykorzystujący lokalny model LLM do podejmowania decyzji"
authors = ["Mariusz <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "llm_trader_mt5"}]

[tool.poetry.dependencies]
python = "^3.10"
metatrader5 = "^5.0.45"
langchain = "^0.1.0"
ollama = "^0.1.5"
numpy = "^1.26.0"
pandas = "^2.1.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pydantic = "^2.0.0"
pyzmq = "^25.1.0"
sqlalchemy = "^2.0.0"
alembic = "^1.10.0"
loguru = "^0.7.0"
streamlit = "^1.25.0"
plotly = "^5.15.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
python-dotenv = "^1.0.0"
ta-lib = "^0.4.28"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*" 